compiler/tests/en/errors/extern_mod_misuse.salam
// EXPECT: modify
extern:
    inline func fabs(x : f64) : f64
end

func main:
    println fabs(0.0 - 1.0)
end
